deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fishy-service
  namespace: fishy-site
spec:
  selector:
    app: node
  ports:
  - name: web
    targetPort: 8080
    port: 80
